--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -4431,7 +4431,7 @@
                 }
 
                 // Successfully renamed folder
-                fetchFolders();
+                fetchAndRenderItems();
             } catch (error) {
                 console.error("Error renaming folder:", error);
                 alert("There was an error renaming the folder. Please try again.");
