--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -199,7 +199,7 @@
         }
 
         /* individual items (applies to both folders and notes) */
-        #items-list li {
+        #items-list > li {
             background-color: var(--ctr-color);
             padding: 20px;
             border-radius: 15px;
@@ -264,7 +264,7 @@
         }
 
         /* hover for both */
-        #items-list li:hover {
+        #items-list > li:hover {
             background-color: #4a4a4a;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
         }
@@ -552,8 +552,16 @@
         
         .note-preview {
             text-align: left;
+            overflow: auto !important;
+            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none; /* IE 10+ */
+            }
+            .note-preview::-webkit-scrollbar {
+                display: none; /* Chrome, Safari, Edge */
+            }
+            .note-preview {
             max-height: 120px;
-            overflow: hidden;
+            overflow: scroll;
             margin: 10px 0;
         }
         
